OpenLDAP 2.3 Change Log

OpenLDAP 2.3.36 Engineering
	Fixed slapd error code on Windows (ITS#4945, #4606)
	Fixed slapd mutex bug after failed startup (ITS#4957)
	Fixed slapd sasl failed Bind bug (ITS#4954)
	Fixed slapd tool op init (ITS#4911)
	Fixed slapd-bdb no-op crasher (ITS#4925)
	Fixed slapd-config olcModuleLoad replace (ITS#4921,ITS#4923)
	Fixed slapd-config olcLogLevel (ITS#4949)
	Fixed slapd-relay crash when no database can be selected (ITS#4958)
	Fixed slapo-chain RFC3062 passwd exop handling (ITS#4964)
	Fixed slapo-dynlist multiple group/url[/member] config (ITS#4989)
	Fixed slapo-pcache handling of abandoned Operations (#5015)
	Fixed slapo-pcache and -rwm interaction (ITS#4991)
	Fixed slapo-ppolicy pwdReset/pwdMinAge (ITS#4970)
	Fixed slapo-ppolicy control cleanup from ITS#4665
	Fixed slapo-syncprov cookie parsing error (ITS#4977)
	Fixed slapo-valsort crash on delete op (ITS#4966)
	Fixed liblber compilation problem (ITS#5007)
	Fixed libldap referral chasing loop (ITS#4955)
	Fixed libldap response code handling on rebind (ITS#4924)
	Fixed libldap SASL_MAX_BUFF_SIZE (ITS#4935)
	Fixed libldap cldap assert (ITS#4992)
	Fixed libldap_r thread debug issues (ITS#4972)
	Fixed liblutil reading passwd from pipe (ITS#4875)
	Fixed ldap client usage typo (ITS#4939)
	Build Environment
		Fixed --disable-overlays Makefile problem (ITS#4988)
		Fixed HP-UX socklen_t problem (ITS#4629)
	Documentation
		Updated ldapsearch(1) with details on -C option (ITS#5009)
		Updated slapadd(8) with details on -s option
		Updated slapd.conf(5) for correct loglevel packaets (ITS#5011)
		Updated slapo-ppolicy(5) for pwdAccountLockedTime zero example (ITS#4978)

OpenLDAP 2.3.35 Release (2007/04/09)
	Fixed ldapmodify to use correct memory free functions (ITS#4901)
	Fixed slapd acl set minor typo (ITS#4874)
	Fixed slapd entry consistency check in str2entry2 (ITS#4852)
	Fixed slapd ldapi:// credential issue (ITS#4893)
	Fixed slapd str2anlist handling of undefined attrs/OCs (ITS#4854)