@@ -4,10 +4,11 @@ OpenLDAP 2.3.36 Engineering
 	Fixed slapd error code on Windows (ITS#4945, #4606)
 	Fixed slapd mutex bug after failed startup (ITS#4957)
 	Fixed slapd sasl failed Bind bug (ITS#4954)
+	Fixed slapd sasl ssf logging (ITS#5001)
 	Fixed slapd tool op init (ITS#4911)
 	Fixed slapd-bdb no-op crasher (ITS#4925)
-	Fixed slapd-config olcModuleLoad replace (ITS#4921,ITS#4923)
 	Fixed slapd-config olcLogLevel (ITS#4949)
+	Fixed slapd-config olcModuleLoad replace (ITS#4921,ITS#4923)
 	Fixed slapd-relay crash when no database can be selected (ITS#4958)
 	Fixed slapo-chain RFC3062 passwd exop handling (ITS#4964)
 	Fixed slapo-dynlist multiple group/url[/member] config (ITS#4989)
